--- a/ChengYuDaHuiGame/res/values-v14/styles.xml
+++ b/ChengYuDaHuiGame/res/values-v14/styles.xml
@@ -26,7 +26,7 @@
     </style>
 
     <!-- Application theme. -->
-    <style name="AppTheme" parent="@style/ThemeActivity">
+    <style name="AppTheme" parent="AppBaseTheme">
         <item name="android:actionBarStyle">@style/CustomActionBarStyle</item>
         <item name="android:actionButtonStyle">@style/CustomActionButtonStyle</item>
         <item name="android:actionOverflowButtonStyle">@style/CustomActionOverflowButtonStyle</item>
