--- a/ChengYuDaHuiGame/res/layout/story_custom_dl_dialog.xml
+++ b/ChengYuDaHuiGame/res/layout/story_custom_dl_dialog.xml
@@ -21,11 +21,12 @@
 
         <ProgressBar
             android:id="@+id/scdd_bar_download"
-            style="@android:style/Widget.ProgressBar.Horizontal"
+            style="@style/Custom.ProgressBar.Horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/scdd_tv_msg"
+            android:layout_centerVertical="true"
             android:layout_marginRight="10dp"
             android:layout_toLeftOf="@+id/scdd_tv_percent" />
 
@@ -34,6 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
             android:layout_below="@+id/scdd_tv_msg"
             android:text="80%" />
     </RelativeLayout>
