--- a/ChengYuDaHuiGame/res/values/styles.xml
+++ b/ChengYuDaHuiGame/res/values/styles.xml
@@ -2,13 +2,13 @@
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
     <style name="AppBaseTheme" parent="Theme.AppCompat.Light">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
+            backward-compatibility can go here.
         -->
     </style>
 
@@ -35,7 +35,7 @@
     <style name="SlideTheme" parent="AppBaseTheme">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowAnimationStyle">@style/Animation_translate</item>
-        <item name="android:windowBackground">@drawable/bg_activity</item>
+        <item name="android:windowBackground">@color/activity_background</item>
     </style>
 
     <style name="Animation_translate">
@@ -46,16 +46,7 @@
     </style>
 
     <style name="SlideExitTheme" parent="AppBaseTheme">
-        <item name="android:windowIsTranslucent">true</item>
-        <item name="android:windowBackground">@drawable/bg_activity</item>
-        <item name="android:windowAnimationStyle">@style/Animation_exit_translate</item>
-    </style>
-
-    <style name="Animation_exit_translate">
-        <item name="android:activityOpenEnterAnimation">@anim/activity_open_enter</item>
-        <item name="android:activityOpenExitAnimation">@anim/activity_open_exit</item>
-        <item name="android:activityCloseEnterAnimation">@anim/activity_left_in</item>
-        <item name="android:activityCloseExitAnimation">@anim/activity_right_out</item>
+        <item name="android:windowBackground">@color/activity_background</item>
     </style>
 
     <style name="Custom.ProgressBar.Horizontal" parent="android:Widget.ProgressBar.Horizontal">
@@ -112,4 +103,5 @@
         <item name="android:textColor">#000000</item>
         <item name="android:gravity">center</item>
     </style>
+
 </resources>
