--- a/ChengYuDaHuiGame/res/layout/chengyu_jielong.xml
+++ b/ChengYuDaHuiGame/res/layout/chengyu_jielong.xml
@@ -3,50 +3,62 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <LinearLayout
-        android:id="@+id/ll_input"
+    <RelativeLayout
+        android:id="@+id/rl_bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="2dp"
-        android:orientation="horizontal" >
+        android:background="@color/titlebar_bg"
+        android:padding="4dp" >
 
-        <EditText
-            android:id="@+id/editText1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/text_box_bg"
-            android:singleLine="true" >
-
-            <requestFocus />
-        </EditText>
+        <Button
+            android:id="@+id/btn_tips"
+            android:layout_width="60dp"
+            android:layout_height="40dp"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/short_btn_bg_selector"
+            android:text="提示" />
 
         <Button
             android:id="@+id/btn_send"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="40dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/short_btn_bg_selector"
             android:text="发送" />
-    </LinearLayout>
 
-    <ScrollView
-        android:id="@+id/sv_jielong"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/ll_input"
-        android:layout_alignParentTop="true" >
-
-        <LinearLayout
+        <EditText
+            android:id="@+id/et_sendmessage"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:layout_height="40dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_toLeftOf="@id/btn_send"
+            android:layout_toRightOf="@id/btn_tips"
+            android:background="@drawable/text_box_bg"
+            android:gravity="center_vertical"
+            android:imeOptions="actionSend"
+            android:padding="10dp"
+            android:singleLine="true"
+            android:textSize="16sp" />
+    </RelativeLayout>
 
-            <TextView
-                android:id="@+id/textView1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
-        </LinearLayout>
-    </ScrollView>
+    <ListView
+        android:id="@+id/listview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/rl_bottom"
+        android:layout_marginLeft="10.0dip"
+        android:layout_marginRight="10.0dip"
+        android:layout_marginTop="10.0dip"
+        android:cacheColorHint="#00000000"
+        android:divider="@null"
+        android:dividerHeight="1dp"
+        android:scrollbars="none"
+        android:stackFromBottom="true" 
+        android:transcriptMode="alwaysScroll" />
 
 </RelativeLayout>
