--- a/ChengYuDaHuiGame/res/values/styles.xml
+++ b/ChengYuDaHuiGame/res/values/styles.xml
@@ -2,14 +2,12 @@
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
+        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.    -->
     <style name="AppBaseTheme" parent="Theme.AppCompat.Light">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
+            backward-compatibility can go here.        -->
     </style>
 
     <!-- Application theme. -->
@@ -24,7 +22,7 @@
 
     <style name="ActivityTheme" parent="AppBaseTheme">
          <item name="android:windowNoTitle">true</item>
-        <item name="android:windowBackground">@drawable/bg_activity</item>
+        <item name="android:windowBackground">@null</item>
     </style>
 
     <style name="ActivityTheme2" parent="AppBaseTheme">
