--- a/ChengYuDaHuiGame/res/drawable/tab_test_btn.xml
+++ b/ChengYuDaHuiGame/res/drawable/tab_test_btn.xml
@@ -2,6 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:drawable="@drawable/tab_icon_test_press" android:state_selected="true"/>
+    <item android:drawable="@drawable/tab_icon_test_press" android:state_focused="true"/>
     <item android:drawable="@drawable/tab_icon_test_normal"/>
 
 </selector>
