--- a/ChengYuDaHuiGame/res/layout/fragment_friend_list.xml
+++ b/ChengYuDaHuiGame/res/layout/fragment_friend_list.xml
@@ -6,13 +6,11 @@
     tools:context="com.zhaoyan.juyou.game.chengyudahui.MainActivity$PlaceholderFragment" >
 
     <ListView
-        android:id="@+id/lv_study"
+        android:id="@+id/lv_friend"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@null"
-        android:dividerHeight="8dp"
         android:listSelector="@android:color/transparent"
-        android:padding="8dp"
+        android:focusable="false"
         android:scrollbars="none" >
     </ListView>
 
