--- a/ChengYuDaHuiGame/res/layout/fragment_list_item.xml
+++ b/ChengYuDaHuiGame/res/layout/fragment_list_item.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="48dp"
@@ -9,24 +10,24 @@
     android:background="@drawable/card_one_bg"
     tools:context="com.zhaoyan.juyou.game.chengyudahui.MainActivity$PlaceholderFragment" >
 
-    <ImageView 
-        android:id="@+id/list_item_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
+    <com.zhaoyan.juyou.game.chengyudahui.view.RoundedImageView
+        android:id="@+id/head_view"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
         android:layout_marginRight="10dp"
-        />
+        android:scaleType="center"
+        app:riv_corner_radius="90dp"
+         />
     
     <LinearLayout 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@id/list_item_icon"
+        android:layout_toRightOf="@id/head_view"
         >
         <TextView 
-            android:id="@+id/list_item_title"
+            android:id="@+id/username_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@android:color/white"
@@ -34,7 +35,7 @@
             />
         
         <TextView 
-            android:id="@+id/list_item_summary"
+            android:id="@+id/info_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@android:color/darker_gray"
