--- a/ChengYuDaHuiGame/res/layout/get_app_list_item.xml
+++ b/ChengYuDaHuiGame/res/layout/get_app_list_item.xml
@@ -29,7 +29,7 @@
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_margin="10dp"
-            android:src="@drawable/ic_launcher" />
+            android:src="@drawable/ic_launcher1" />
 
         <Button
             android:id="@+id/btn_download"
