--- a/ChengYuDaHuiGame/res/layout/qrcode_display.xml
+++ b/ChengYuDaHuiGame/res/layout/qrcode_display.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_margin="5dp"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/ic_launcher1" />
 
     <TextView
         android:layout_width="match_parent"
