--- a/ChengYuDaHuiGame/res/layout/share_app_list_item.xml
+++ b/ChengYuDaHuiGame/res/layout/share_app_list_item.xml
@@ -21,7 +21,7 @@
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_margin="10dp"
-            android:src="@drawable/ic_launcher" />
+            android:src="@drawable/ic_launcher1" />
 
         <Button
             android:id="@+id/btn_share"
