--- a/ChengYuDaHuiGame/res/layout/fragment_list.xml
+++ b/ChengYuDaHuiGame/res/layout/fragment_list.xml
@@ -12,7 +12,10 @@
         android:divider="@null"
         android:dividerHeight="8dp"
         android:listSelector="@android:color/transparent"
-        android:padding="8dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
         android:scrollbars="none" >
     </ListView>
 
