--- a/ChengYuDaHuiGame/res/layout/fragment_friend_list.xml
+++ b/ChengYuDaHuiGame/res/layout/fragment_friend_list.xml
@@ -11,7 +11,6 @@
         android:layout_height="match_parent"
         android:listSelector="@android:color/transparent"
         android:focusable="false"
-        android:scrollbars="none" >
-    </ListView>
+        android:scrollbars="none" />
 
 </RelativeLayout>
