--- a/ChengYuDaHuiGame/res/layout/zy_action_bar_normal.xml
+++ b/ChengYuDaHuiGame/res/layout/zy_action_bar_normal.xml
@@ -10,7 +10,8 @@
 		android:layout_width="?attr/zyActionBarDividerWidth"
 		android:layout_height="fill_parent"
 		android:background="?attr/zyActionBarDividerDrawable" 
-		android:visibility="gone"
+		android:layout_marginTop="10dp"
+		android:layout_marginBottom="10dp"
 		/>
 
 	<TextView
